--- a/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
+++ b/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
@@ -113,7 +113,7 @@
   
       <ion-col>
         <ion-row>
-          <ion-col size="11.5" push="0.25">
+          <ion-col size="11.5" push="0.25" *ngIf=" (auth.user | async) as userLogged">
             <ion-row
               class="
                 ion-justify-content-start
@@ -125,9 +125,10 @@
               <h1 class="ion-margin-top ion-margin-bottom ion-margin-end">
                 Fotografías
               </h1>
+                  <!-- TODO: hacer priv el rolific-->
               <ion-fab-button
                 size="small"
-                *ngIf="contestService.isActive(concurso) && concursantes.length > 0"
+                *ngIf="contestService.isActive(concurso) && concursantes.length > 0 && isLogedIn() && !rolificador.isNotPrivilegies(userLogged)"
                 (click)="postImage()"
               >
                 <!-- [routerLink]="['agregar-foto']"   -->
@@ -411,7 +412,7 @@
                               <ion-icon name="image-outline"></ion-icon>
                             </ion-button>
                             <ion-button
-                              *ngIf="checkPermissions"
+                              *ngIf="checkPermissions && isLogedIn() && !rolificador.isNotPrivilegies(userLogged)"
                               (click)="concursoDetailService.reviewImage.emit(r)"
                               title="Calificar"
                             >
