modificacion img concursos e info-centro

--- a/src/app/concursos/concurso-detail/image-post/image-post.page.html
+++ b/src/app/concursos/concurso-detail/image-post/image-post.page.html
@@ -48,9 +48,9 @@
                     </ion-item>
                     <div>
                       <!-- <ion-thumbnail> -->
-                        <ion-row  class="ion-justify-content-center">
+                        <ion-row  *ngIf="img_url != ''"  class="ion-justify-content-center">
 
-                          <ion-img  [src]="imgSource" alt=""> </ion-img>
+                          <ion-img (ionError)="img_url=''" [src]="imgSource" alt=""> </ion-img>
                         </ion-row>
                       <!-- </ion-thumbnail> -->
                     </div>
