--- a/src/app/concursos/concurso-detail/concurso-detail.page.html
+++ b/src/app/concursos/concurso-detail/concurso-detail.page.html
@@ -25,8 +25,8 @@
     <ion-col>
       <!-- <ion-card *ngIf="!loading; else spinner" class="ion-no-margin"> -->
       <ion-card class="ion-no-margin">
-        <ion-avatar class="w-100" [style.height.vh]="obtenerPx()">
-          <ion-img [src]="configService.apiUrl(concurso.img_url)"></ion-img>
+        <ion-avatar *ngIf="!noImg" class="w-100" [style.height.vh]="obtenerPx()">
+          <ion-img (ionError)="noImg = true" [src]="configService.apiUrl(concurso.img_url)"></ion-img>
         </ion-avatar>
         <ion-card-header>
           <ion-row>
